--- a/package.json
+++ b/package.json
@@ -16,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/marcpre/learning_jquery_repeater-field/issues"
   },
-  "homepage": "https://github.com/marcpre/learning_jquery_repeater-field#readme"
+  "homepage": "https://github.com/marcpre/learning_jquery_repeater-field#readme",
+  "dependencies": {
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "knex": "^0.14.0",
+    "morgan": "^1.9.0",
+    "pg": "^7.4.0",
+    "pug": "^2.0.0-rc.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
+  }
 }
