--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/marcpre/learning_jquery_repeater-field#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "hbs": "^4.0.1",
     "knex": "^0.14.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.0",
